package com.example.netnew

import androidx.appcompat.app.AppCompatActivity
import android.os.Bundle
import com.example.netnew.R

class MainActivity : AppCompatActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_main)
    }
}