@startuml

title __NETNEW's Class Diagram__\n

  namespace com.example.netnew {
    class com.example.netnew.MainActivity {
        # onCreate()
    }
  }
  

  namespace com.example.netnew {
    class com.example.netnew.MyApplication {
        {static} + Instance : MyApplication
        - mMainActivity : Activity
        + getMainActivity()
        + onCreate()
        + setMainActivity()
    }
  }
  

  com.example.netnew.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.netnew.MyApplication -up-|> android.app.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
